[gd_scene load_steps=5 format=3 uid="uid://crjhsdn7gms3w"]

[ext_resource type="Script" path="res://player.gd" id="1_j4nyg"]
[ext_resource type="PackedScene" uid="uid://b2rt7ykeda71a" path="res://scenes/projectile.tscn" id="2_xehf6"]
[ext_resource type="Texture2D" uid="uid://tmqr2hx7sdex" path="res://assets/Group 35.png" id="3_tj400"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8efcs"]
size = Vector2(23.25, 16)

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -10)
script = ExtResource("1_j4nyg")
bullet_node = ExtResource("2_xehf6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.5, 10)
scale = Vector2(0.025, 0.025)
texture = ExtResource("3_tj400")
region_rect = Rect2(73, 2, 7, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.375, 10)
shape = SubResource("RectangleShape2D_8efcs")

[node name="FireRate" type="Timer" parent="."]
process_callback = 0
wait_time = 0.06

[node name="Cooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Active" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
[connection signal="timeout" from="FireRate" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="timeout" from="Active" to="." method="_on_active_timeout"]
